Fixes cancel button spacing on slider more info for mobile

--- a/public/src/scss/_slider.scss
+++ b/public/src/scss/_slider.scss
@@ -132,6 +132,10 @@
     black 100%);
 
     padding-top: 2em;
+    @include mobile {
+        padding-top: 2.8em;
+    }
+
     position: relative;
     .more-info-row {
         display: flex;
